--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="welcome_text">Welcome to Queuee</string>
+    <string name="cancel_text">Cancel</string>
     <string name="title_activity_in_queue">InQueueActivity</string>
 </resources>
