--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="welcome_text">Welcome to Queuee</string>
     <string name="cancel_text">Cancel</string>
     <string name="title_activity_in_queue">InQueueActivity</string>
+    <string name="title_activity_thank_you">ThankYouActivity</string>
+    <string name="title_activity_you_are_next">YouAreNextActivity</string>
 </resources>
