--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">Queuee2</string>
-
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="welcome_text">Welcome to Queuee</string>
     <string name="cancel_text">Cancel</string>
+    <string name="you_are_next_text">Hey its your turn!</string>
+    <string name="thank_you_text">Thank You!</string>
     <string name="title_activity_in_queue">InQueueActivity</string>
     <string name="title_activity_thank_you">ThankYouActivity</string>
     <string name="title_activity_you_are_next">YouAreNextActivity</string>
