--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="cancel_text">Cancel</string>
     <string name="you_are_next_text">Hey its your turn!</string>
     <string name="thank_you_text">Thank You!</string>
+    <string name="directions_text">Please go to till 5</string>
     <string name="title_activity_in_queue">InQueueActivity</string>
     <string name="title_activity_thank_you">ThankYouActivity</string>
     <string name="title_activity_you_are_next">YouAreNextActivity</string>
