--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="your_lined_up_text">OK</string>
 
     <string name="action_settings">Settings</string>
-    <string name="welcome_text">Welcome to Queuee</string>
+    <string name="welcome_text">Welcome to Quewe</string>
     <string name="cancel_text">Cancel</string>
     <string name="you_are_next_text">Hey its your turn!</string>
     <string name="thank_you_text">Thank You!</string>
