--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="welcome_text">Welcome to Quewe</string>
-    <string name="cancel_text">Cancel</string>
+    <string name="cancel_text">cancel</string>
     <string name="you_are_next_text">Hey its your turn!</string>
     <string name="thank_you_text">Thank You!</string>
     <string name="directions_text">Please go to till 5</string>
