--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -3,11 +3,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="ok_text">OK</string>
     <string name="your_lined_up_text">OK</string>
+    <string name="queue_instructions">Press + to get in the queue</string>
 
     <string name="action_settings">Settings</string>
     <string name="welcome_text">Welcome to Quewe</string>
     <string name="cancel_text">Cancel</string>
-    <string name="you_are_next_text">Hey its your turn!</string>
+    <string name="you_are_next_text">Its your turn!\ngo to cashier 4</string>
     <string name="thank_you_text">Thank You!</string>
     <string name="directions_text">Please go to till 5</string>
     <string name="title_activity_in_queue">InQueueActivity</string>
