--- a/CashierQueuee/app/src/main/res/values/strings.xml
+++ b/CashierQueuee/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">CashierQueuee</string>
-
+    <string name="cashier_text">Cashier</string>
+    <string name="cashier_number">#</string>
+    <string name="start_queue_text">Tap to start queue!</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_start_queue">StartQueue</string>
+    <string name="title_activity_queue_in_progress">QueueInProgressActivity</string>
 </resources>
