--- a/CashierQueuee/app/src/main/res/values/strings.xml
+++ b/CashierQueuee/app/src/main/res/values/strings.xml
@@ -3,13 +3,15 @@
     <string name="cashier_text">Cashier</string>
     <string name="cashier_number">#</string>
 
-    <string name="welcome_text">Welcome</string>
-    <string name="help_text">We help you to queue!</string>
+    <string name="title_activity_start_queue">StartQueue</string>
+    <string name="welcome_text">Welcome!</string>
+    <string name="help_text">We help you to queue</string>
     <string name="scanning_text">Scanning</string>
 
     <string name="start_queue_text">Tap to start queue!</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_start_queue">StartQueue</string>
+
     <string name="title_activity_queue_in_progress">QueueInProgressActivity</string>
+    <string name="number_of_people_in_queue">#</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
