--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -5,8 +5,11 @@
     <string name="your_lined_up_text">OK</string>
     <string name="queue_instructions">Press + to get in the queue</string>
 
+    <string name="add_to_queue_activity_welcome_title">Welcome!</string>
+    <string name="add_to_queue_activity_welcome_subtitle">We queue for you</string>
+    <string name="add_to_queue_activity_footer">finding a queue for you!</string>
+
     <string name="action_settings">Settings</string>
-    <string name="welcome_text">Welcome to Quewe</string>
     <string name="cancel_text">Cancel</string>
     <string name="you_are_next_text">Its your turn!\ngo to cashier 4</string>
     <string name="thank_you_text">Thank You!</string>
