--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="add_to_queue_activity_welcome_subtitle">We queue for you</string>
     <string name="add_to_queue_activity_footer">finding a queue for you!</string>
 
+    <string name="leave_queue_confirmation_dialog">Are you sure you want to leave the queue?</string>
+
     <string name="action_settings">Settings</string>
     <string name="cancel_text">Cancel</string>
     <string name="you_are_next_text">Its your turn!\ngo to cashier 4</string>
