--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Queuee2</string>
+    <string name="app_name">Quewe</string>
     <string name="hello_world">Hello world!</string>
     <string name="ok_text">OK</string>
     <string name="your_lined_up_text">OK</string>
