--- a/Queuee2/app/src/main/res/values/strings.xml
+++ b/Queuee2/app/src/main/res/values/strings.xml
@@ -13,7 +13,13 @@
     <string name="add_to_queue_footer_closed">come back soon!</string>
     <string name="add_to_queue_subheader_empty">queue empty</string>
 
+    <string name="in_queue_subheader_welcome">Finding position in queue…</string>
+    <string name="in_queue_almost_there_header">Almost There!</string>
+    <string name="in_queue_almost_there_subheader">Soon it\'s your turn!</string>
     <string name="leave_queue_confirmation_dialog">Are you sure you want to leave the queue?</string>
+
+    <string name="thank_you_header">Thank you!</string>
+    <string name="thank_you_subheader">Have a great day</string>
 
     <string name="action_settings">Settings</string>
     <string name="cancel_text">Cancel</string>
